k8s/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xfinder-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xfinder-frontend
  template:
    metadata:
      labels:
        app: xfinder-frontend
    spec:
      containers:
        - name: xfinder-frontend
          image: ethans333/xfinder-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
